add logout & add session

--- a/config/config.json
+++ b/config/config.json
@@ -9,6 +9,8 @@
 
     "routes": {
         "/Authentification": "Authentification",
-        "/": "Home"
+        "/": "Home",
+        "/logout": ""
+
     }
 }
