--- a/config/config.json
+++ b/config/config.json
@@ -11,7 +11,8 @@
         "/Authentification": "Authentification",
         "/": "Home",
         "/logout": "",
-        "/Profil": "Profil"
+        "/Profil": "Profil",
+        "/sudoku": "Sudoku"
 
     }
 }
