add chess & connect4

--- a/config/config.json
+++ b/config/config.json
@@ -12,7 +12,8 @@
         "/": "Home",
         "/logout": "",
         "/Profil": "Profil",
-        "/sudoku": "Sudoku"
+        "/sudoku": "Sudoku",
+        "/puissance4": "Connect4"
 
     }
 }
