--- a/config/config.json
+++ b/config/config.json
@@ -16,6 +16,8 @@
         "/Profil": "Profil",
         "/sudoku": "Sudoku",
         "/puissance4": "Connect4",
-        "/dataScoreConnect4": "Connect4"
+        "/dataScoreConnect4": "Connect4",
+        "/echecs": "Chess",
+        "/dataScoreChess": "Chess"
     }
 }
