add a new nav bar (glitch with checkers games)

--- a/config/config.json
+++ b/config/config.json
@@ -18,6 +18,7 @@
         "/puissance4": "Connect4",
         "/dataScoreConnect4": "Connect4",
         "/echecs": "Chess",
-        "/dataScoreChess": "Chess"
+        "/dataScoreChess": "Chess",
+        "/dames": "Dames"
     }
 }
