--- a/config/config.json
+++ b/config/config.json
@@ -15,6 +15,7 @@
         "/dataHome": "Home",
         "/Profil": "Profil",
         "/sudoku": "Sudoku",
+        "/dataScoreSudoku": "Sudoku",
         "/puissance4": "Connect4",
         "/dataScoreConnect4": "Connect4",
         "/echecs": "Chess",
