--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Loïc Lim",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.874.0",
     "bcrypt": "^5.0.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
