--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "express-session": "^1.17.1",
     "mysql": "^2.18.1",
     "socket.io": "^4.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
